##
# Copyright 2013 Google Inc.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
##

load("@rules_java//java:defs.bzl", "java_library")

package(
    default_testonly = True,
    default_visibility = ["//:soy_internal"],
)

java_library(
    name = "abstract_soy_print_directive_test_case",
    srcs = ["AbstractSoyPrintDirectiveTestCase.java"],
    deps = [
        "//java/src/com/google/template/soy/data",
        "//java/src/com/google/template/soy/jssrc/restricted",
        "//java/src/com/google/template/soy/shared/restricted",
        "@maven//:com_google_code_findbugs_jsr305",
        "@maven//:com_google_guava_guava",
        "@maven//:com_google_truth_truth",
        "@maven//:junit_junit",
        "@maven//:org_mozilla_rhino",
    ],
)

java_library(
    name = "shared_test_utils",
    srcs = ["SharedTestUtils.java"],
    deps = [
        "//java/src/com/google/template/soy/base/internal",
        "//java/src/com/google/template/soy/error:error_reporter",
        "//java/src/com/google/template/soy/exprtree",
        "//java/src/com/google/template/soy/internal/proto",
        "//java/src/com/google/template/soy/soyparse",
        "//java/src/com/google/template/soy/soytree",
        "//java/src/com/google/template/soy/soytree:soynode",
        "//java/src/com/google/template/soy/types",
        "@com_google_protobuf//:protobuf_java",
        "@maven//:com_google_guava_guava",
        "@maven//:com_google_truth_truth",
        "@maven//:junit_junit",
    ],
)

java_library(
    name = "soy_file_set_parser_builder",
    srcs = ["SoyFileSetParserBuilder.java"],
    deps = [
        ":shared_test_utils",
        "//java/src/com/google/template/soy:impl",
        "//java/src/com/google/template/soy/base",
        "//java/src/com/google/template/soy/base/internal",
        "//java/src/com/google/template/soy/conformance",
        "//java/src/com/google/template/soy/css",
        "//java/src/com/google/template/soy/error:error_reporter",
        "//java/src/com/google/template/soy/internal/proto",
        "//java/src/com/google/template/soy/logging:internal",
        "//java/src/com/google/template/soy/passes",
        "//java/src/com/google/template/soy/plugin/restricted",
        "//java/src/com/google/template/soy/shared",
        "//java/src/com/google/template/soy/shared/internal",
        "//java/src/com/google/template/soy/shared/restricted",
        "//java/src/com/google/template/soy/shared/restricted:method_annotation",
        "//java/src/com/google/template/soy/types",
        "@com_google_protobuf//:protobuf_java",
        "@maven//:com_google_code_findbugs_jsr305",
        "@maven//:com_google_guava_guava",
    ],
)

java_library(
    name = "annotations",
    srcs = ["TestAnnotations.java"],
)
